--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     <textarea class="raw-markdown" id="markdown"></textarea>
     <div class="rendered-html" id="html"></div>
   </section>
-
+  <script src="renderer.js"></script>
 </body>
 
 </html>
