Finished working on buttons from top; all buttons and their functionality finished

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <button id="open-file">Open File</button>
     <button id="save-markdown" disabled>Save File</button>
     <button id="revert" disabled>Revert</button>
-    <button id="save-html">Save HTML</button>
+    <button id="save-html" disabled>Save HTML</button>
     <button id="show-file" disabled>Show File</button>
     <button id="open-in-default" disabled>Open in Default Application</button>
   </section>
